[gd_scene load_steps=9 format=2]

[ext_resource path="res://BlackBoard.gd" type="Script" id=1]
[ext_resource path="res://texture/OGA3KG0.jpg" type="Texture" id=2]
[ext_resource path="res://font/Pacifico.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://texture/button_texture.png" type="Texture" id=4]
[ext_resource path="res://story.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[node name="BlackBoard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.10352e-005
margin_top = -3.01053
margin_right = -6.10352e-005
margin_bottom = -3.0105
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 60.0
margin_right = -5.0
margin_bottom = -1.0

[node name="Display" type="Label" parent="VBoxContainer"]
margin_right = 955.0
margin_bottom = 400.0
rect_min_size = Vector2( 822, 400 )
custom_fonts/font = SubResource( 1 )
text = "Welcome.........."
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 404.0
margin_right = 955.0
margin_bottom = 505.0
alignment = 2

[node name="TextEntry" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 831.0
margin_bottom = 101.0
rect_min_size = Vector2( 700, 101 )
rect_pivot_offset = Vector2( 314.52, 87.1837 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
max_length = 250

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 835.0
margin_right = 915.0
margin_bottom = 101.0
rect_min_size = Vector2( 80, 101 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 919.0
margin_top = 12.0
margin_right = 955.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 3 )
text = "ok"

[node name="Story" type="Node" parent="."]

[node name="story0" type="Node" parent="Story"]
script = ExtResource( 5 )
Questions = PoolStringArray( "name", "nickname", "age" )
Story = "\"story 0 %s %s %s\""

[node name="story1" type="Node" parent="Story"]
script = ExtResource( 5 )
Questions = PoolStringArray( "name", "nickname", "age" )
Story = "story1 %s %s %s"
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/TextEntry" to="." method="_on_TextEntry_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
